# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  MEMORY.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  技术文档.txt
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
deployments/: devnet-sss1-proof.json  devnet-sss2-proof.json  devnet.json  mainnet.json
docs/: API.md  ARCHITECTURE.md  CLI.md  COMPLIANCE.md  DEPLOYMENT.md  HACKATHON-DELIVERABLES.md  HACKATHON-SUBMISSION-TEMPLATE.md  HACKATHON-SUBMISSION.md  OPERATIONS.md  RUNBOOK.md  SDK.md  SSS-1.md  SSS-2.md
programs/stablecoin-core/: Cargo.toml
programs/stablecoin-core/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/stablecoin-core/src/instructions/: blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: errors.rs  lib.rs  state.rs
scripts/: demo-sss1.ts  demo-sss2.ts  deploy-devnet.sh  deploy-mainnet.sh  rebuild-bigint-buffer.js  verify-devnet.ps1  verify-devnet.sh
sdk/sss-token/: package-lock.json  package.json  tsconfig.json
sdk/sss-token/src/: errors.ts  index.ts  presets.ts  stablecoin.ts  types.ts
sdk/sss-token/src/instructions/: index.ts
sdk/sss-token/src/modules/: compliance.ts  privacy.ts  roles.ts
sdk/sss-token/src/utils/: index.ts
services/: Dockerfile  init.sql  package-lock.json  package.json
services/src/: config.ts  context.ts  index.ts  server.ts
services/src/lib/: db.ts  health.ts  idempotency.test.ts  idempotency.ts  idl.ts  indexer.ts  solana.test.ts  solana.ts  stream.ts  webhooks.ts
services/src/routes/: compliance.ts  indexer.ts  mintBurn.ts
tests/anchor/: sss2.spec.ts  stablecoin.spec.ts
