[package]
name = "stablecoin-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-metadata-interface = "0.8.0"
spl-transfer-hook-interface = "2.1.0"
spl-tlv-account-resolution = "0.11.1"
