[package]
name = "stablecoin-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
spl-pod = "0.1"
spl-token-metadata-interface = "0.2.0"
spl-transfer-hook-interface = "0.4.1"
spl-tlv-account-resolution = "0.5.1"
spl-type-length-value = "0.3"
