[package]
name = "transfer-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
spl-transfer-hook-interface = "2.1.0"
spl-tlv-account-resolution = "0.11.1"
spl-type-length-value = "0.9.0"
